# DistillNet

./: .gitignore  README.md  infer.py  infer_batch.sh  pyproject.toml  train.py
docs/article/: Author statement - CREDIT.docx  document.tex  mybib.bib
docs/article/img/: legend.eps  legend_challenging_assumptions.eps  schema.drawio  schema.eps  top1_accuracy.eps  top1_accuracy_challenging_assumptions.eps  top1_curves.eps  top5_accuracy.eps  top5_accuracy_challenging_assumptions.eps  top5_curves.eps  top5_curves_old.eps
scripts/: decompress_train_data.sh  generate_soft_targets.py  preprocess_data.py  preprocess_validation_data.py  structure_training_data.py  structure_validation_data.py
src/: model.py  paths.py  utils.py
